[package]
name = "simulacrum"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
async-trait.workspace = true   
anyhow.workspace = true
bcs.workspace = true
fastcrypto.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
once_cell.workspace = true
rand.workspace = true
serde.workspace = true
serde_with.workspace = true
tracing.workspace = true
prometheus.workspace = true
futures.workspace = true

move-bytecode-utils.workspace = true
shared-crypto.workspace = true
sui-framework.workspace = true
sui-keys.workspace = true
sui-macros.workspace = true
sui-protocol-config.workspace = true
sui-sdk.workspace = true
sui-types.workspace = true
sui-genesis-builder.workspace = true
sui-execution.workspace = true
sui-transaction-checks.workspace = true
workspace-hack.workspace = true
tempfile.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
sui-types = { workspace = true, features = ["test-utils"] }
