[package]
name = "telemetry-subscribers"
version = "0.2.0"
authors = ["Evan Chan <echan@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/mystenlabs/mysten-infra"
description = "Library for common telemetry and observability functionality"

[dependencies]
atomic_float.workspace = true
bytes.workspace = true
bytes-varint = { version = "1" }
clap.workspace = true
console-subscriber = { workspace = true, optional = true }
crossterm.workspace = true
futures.workspace = true
once_cell.workspace = true
opentelemetry = { version = "0.25.0", optional = true }
opentelemetry-otlp = { version = "0.25.0", features = ["grpc-tonic"], optional = true }
opentelemetry-proto = { version = "0.25", optional = true }
opentelemetry_sdk = { version = "0.25.0", features = ["rt-tokio"], optional = true }
prometheus.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-appender.workspace = true
tracing-opentelemetry = { version = "0.26.0", optional = true }
tracing-subscriber.workspace = true

# must use same version as opentelemetry for tonic and prost, so we can't use from
# workspace
prost = "0.13"
tonic = { version = "0.12.3" }

[features]
default = ["otlp"]
tokio-console = ["console-subscriber"]
otlp = [
  "tracing-opentelemetry",
  "opentelemetry",
  "opentelemetry-otlp",
  "opentelemetry-proto",
  "opentelemetry_sdk",
]

[dev-dependencies]
camino.workspace = true
