[workspace]
resolver = "2"

members = [
    "crates/*",
    "move-execution/v0/crates/move-bytecode-verifier",
    "move-execution/v0/crates/move-vm-runtime",
    "move-execution/v0/crates/move-stdlib",
]

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
aes-gcm = "0.8"
anyhow = "1.0"
arbitrary = { version = "1.1", features = ["derive", "derive_arbitrary"] }
async-trait = "0.1"
bcs = "0.1"
better_any = { version = "0.2", features = ["derive"] }
bitvec = "1.0"
byteorder = "1.4"
bytes = "1.0"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
codespan = "0.11"
codespan-reporting = "0.11"
colored = "2.0"
criterion = "0.3"
criterion-cpu-time = "0.1"
crossbeam = "0.8"
crossbeam-channel = "0.5"
crossterm = "0.25"
curve25519-dalek = { version = "0.1", package = "curve25519-dalek-fiat", default-features = false, features = ["std", "u64_backend"] }
datatest-stable = "0.1"
derivative = "2.2"
difference = "2.0"
digest = "0.9"
dir-diff = "0.3"
dirs-next = "2.0"
dunce = "1.0"
ed25519-dalek = { version = "0.1", package = "ed25519-dalek-fiat", default-features = false, features = ["std", "serde", "u64_backend"] }
ethnum = "1.0"
fail = "0.4"
file_diff = "1.0"
futures = "0.3"
getrandom = "0.2"
heck = "0.3"
hex = "0.4"
hex-literal = "0.3"
hkdf = "0.10"
im = "15.1"
internment = { version = "0.5", features = [ "arc"] }
itertools = "0.13"
leb128 = "0.2"
libfuzzer-sys = "0.4"
log = { version = "0.4", features = ["serde"] }
lsp-server = "0.5"
lsp-types = "0.90"
memory-stats = "1.0"
mirai-annotations = "1.10"
named-lock = "0.2"
num = "0.4"
num-bigint = "0.4"
num_cpus = "1.13"
once_cell = "1.7"
parking_lot = "0.12"
paste = "1.0"
pathdiff = "0.2"
petgraph = "0.5"
phf = { version = "0.11", features = ["macros"] }
plotters = { version = "0.3", default-features = false, features = ["evcxr", "line_series", "histogram"] }
pretty = "0.10"
prettydiff = "0.4"
primitive-types = { version = "0.12", features = ["impl-serde"] }
proc-macro2 = "1.0"
proptest = "1.0"
proptest-derive = "0.3"
quote = "1.0"
rand = "0.8"
rayon = "1.5"
ref-cast = "1.0"
regex = "1.5"
ripemd160 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde-reflection = "0.3"
serde_bytes = "0.11"
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.9"
sha3 = "0.9"
simplelog = "0.9"
similar = "2.4"
smallvec = "1.6"
stacker = "0.1"
static_assertions = "1.1"
syn = { version = "1.0", features = ["derive"] }
tempfile = "3.2"
tera = "1.16"
thiserror = "1.0"
tiny-keccak = { version = "2.0", features = ["sha3"] }
tokio = { version = "1.18", features = ["full"] }
toml = "0.8"
toml_edit = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
treeline = "0.1"
tui = "0.19"
url = "2.2"
variant_count = "1.1"
vfs = "0.10"
walkdir = "2.3"
whoami = { version = "1.2" }
x25519-dalek = { version = "0.1", package = "x25519-dalek-fiat", default-features = false, features = ["std", "u64_backend"] }
z3tracer = "0.8"

bytecode-interpreter-crypto = { path = "crates/bytecode-interpreter-crypto" }
enum-compat-util = { path = "crates/enum-compat-util" }
invalid-mutations = { path = "crates/invalid-mutations" }
module-generation = { path = "crates/module-generation" }
move-abstract-stack = { path = "crates/move-abstract-stack" }
move-binary-format = { path = "crates/move-binary-format" }
move-borrow-graph = { path = "crates/move-borrow-graph" }
move-bytecode-source-map = { path = "crates/move-bytecode-source-map" }
move-bytecode-utils = { path = "crates/move-bytecode-utils" }
move-bytecode-verifier = { path = "crates/move-bytecode-verifier" }
move-bytecode-viewer = { path = "crates/move-bytecode-viewer" }
move-cli = { path = "crates/move-cli" }
move-command-line-common = { path = "crates/move-command-line-common" }
move-compiler = { path = "crates/move-compiler" }
move-core-types = { path = "crates/move-core-types" }
move-coverage = { path = "crates/move-coverage" }
move-disassembler = { path = "crates/move-disassembler" }
move-docgen = { path = "crates/move-docgen" }
move-errmapgen = { path = "crates/move-errmapgen" }
move-ir-compiler = { path = "crates/move-ir-compiler" }
move-ir-to-bytecode = { path = "crates/move-ir-to-bytecode" }
move-ir-to-bytecode-syntax = { path = "crates/move-ir-to-bytecode-syntax" }
move-ir-types = { path = "crates/move-ir-types" }
move-model = { path = "crates/move-model" }
move-package = { path = "crates/move-package" }
move-proc-macros = { path = "crates/move-proc-macros" }
move-prover = { path = "crates/move-prover" }
move-prover-test-utils = { path = "crates/move-prover-test-utils" }
move-read-write-set-types = { path = "crates/move-read-write-set-types" }
move-stackless-bytecode = { path = "crates/move-stackless-bytecode" }
move-stackless-bytecode-interpreter = { path = "crates/move-stackless-bytecode-interpreter" }
move-stdlib = { path = "crates/move-stdlib" }
move-symbol-pool = { path = "crates/move-symbol-pool" }
move-transactional-test-runner = { path = "crates/move-transactional-test-runner" }
move-unit-test = { path = "crates/move-unit-test" }
move-vm-config = { path = "crates/move-vm-config" }
move-vm-profiler = { path = "crates/move-vm-profiler" }
move-vm-runtime = { path = "crates/move-vm-runtime" }
move-vm-test-utils = { path = "crates/move-vm-test-utils" }
move-vm-types = { path = "crates/move-vm-types" }
prover_bytecode = { path = "crates/move-stackless-bytecode", package = "move-stackless-bytecode" }

[profile.bench]
debug = true

[profile.dev]
debug = true

[profile.test.package.move-vm-integration-tests]
# opt-level 2 for move-compiler reduces the size of some of its
# (recursive) stack frames by up to 10x, avoiding stack overflows.
opt-level = 3

# use release settings to reduce memory pressure in the linking step in CI
[profile.ci]
inherits = "test"
debug = 0           # for saving disk space during linking
incremental = false
codegen-units = 16
