[package]
name = "docs-examples"
version.workspace = true
edition = "2021"

[dependencies]
anyhow.workspace = true
bcs.workspace = true
bip32.workspace = true
tokio.workspace = true

iota-keys.workspace = true
iota-sdk.workspace = true
move-core-types.workspace = true
shared-crypto.workspace = true

[[example]]
name = "unlock_condition"
path = "src/stardust/unlock_condition.rs"
