[package]
name = "iota-move-natives-v1"
version = "0.1.0"
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Move framework for iota platform"

[dependencies]
# external dependencies
bcs.workspace = true
better_any.workspace = true
fastcrypto.workspace = true
fastcrypto-vdf.workspace = true
fastcrypto-zkp.workspace = true
indexmap.workspace = true
rand = { workspace = true, features = ["small_rng"] }
smallvec.workspace = true
tracing.workspace = true

# internal dependencies
iota-protocol-config.workspace = true
iota-types.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-stdlib-natives = { path = "../../../external-crates/move/move-execution/v1/crates/move-stdlib-natives", package = "move-stdlib-natives-v1" }
move-vm-runtime = { path = "../../../external-crates/move/move-execution/v1/crates/move-vm-runtime", package = "move-vm-runtime-v1" }
move-vm-types.workspace = true
