[package]
name = "move-analyzer"
version = "1.0.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "A language server for Move"
repository = "https://github.com/move-language/move"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
codespan-reporting.workspace = true
derivative = "2.2"
dunce.workspace = true
im.workspace = true
itertools.workspace = true
lsp-server = "0.5"
lsp-types = "0.90"
serde_json.workspace = true
tempfile.workspace = true
url = "2.2"
vfs.workspace = true
clap.workspace = true
crossbeam = "0.8"
move-command-line-common.workspace = true
move-compiler.workspace = true
move-ir-types.workspace = true
move-package.workspace = true
move-symbol-pool.workspace = true
